=== master

* Add index_caching extension for caching calls to Database#indexes (kenaniah, jeremyevans) (#1461)

* Allow Database#indexes on SQLite, MSSQL, SQLAnywhere, and DB2 to handle SQL::Identifier values (jeremyevans)

* Add pg_timestamptz extension for using timestamptz (timestamp with time zone) as the default timestamp type (jeremyevans)

* Support Sequel.date_{add,sub} :cast option for setting cast type in date_arithmetic extension (jeremyevans)

* Optimize Database#synchronize implementation on ruby 2.5+ (jeremyevans)

* Add class_table_inheritance plugin :ignore_subclass_columns option (brianphillips) (#1459)

* Make Dataset#to_xml in xml_serializer work with eager_graphed datasets (jeremyevans)

* Make Dataset#to_json in json_serializer work with eager_graphed datasets (jeremyevans)

* Cache Dataset#nullify dataset in the null_dataset extension (chanks) (#1456)

* Add datetime_parse_to_time extension, for parsing timestamp strings without offsets using DateTime.parse.to_time (jeremyevans) (#1455)

* Add WHERE NULL filter for Dataset#where calls with no existing filter, no argument, and where the virtual row block returns nil (jeremyevans)

=== 5.3.0 (2017-12-01)

* Add logger to Database instance before making first connection in bin/sequel (jeremyevans)

* Drop support for PostgreSQL <8.1 in Database#indexes (jeremyevans)

* Add synchronize_sql extension, for checking out a connection around SQL generation (KJTsanaktsidis, jeremyevans) (#1451)

* Deprecate Dataset#where calls with no existing filter, no argument, and where the virtual row block returns nil (jeremyevans) (#1454)

* Add DatasetModule#reverse for simpler use of descending orders (jeremyevans)

* Support WITH clauses in subqueries on SQLite, but not in UNION/INTERSECT/EXCEPT (jeremyevans)

* Hoist WITH clauses to INSERT statement level if INSERT subquery uses a CTE on MSSQL (jeremyevans)
